tests/fixtures/invalid/pow_none_str_dict.py
# Cannot call pow() with None, Str, Dict[str, int]
x = pow(None, "hello", {"a": 1})
